bad commit message

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -5,3 +5,15 @@
 	year = {2019},
 	publish = {CRC Press LLC}
 }
+@book{Burden2016,
+	author = {Burden, Richard L.},
+	title = {Numerical Analysis},
+	year = {2016},
+	publish = {Cengage Learning}
+}
+@book{Hairer2008,
+	author = {Hairer, E.},
+	title = {Solving Ordinary Differential Equations I: Nonstiff Problems},
+	year = {2008},
+	publish = {Springer}
+}
