--- a/docs/latex/header.tex
+++ b/docs/latex/header.tex
@@ -51,21 +51,21 @@ right=1.65in,
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
 \definecolor{backcolour}{rgb}{1,1,1}
 
-%\lstdefinestyle{matlab}{
-%	language=MATLAB,
-%	backgroundcolor=\color{backcolour},   
-%	commentstyle=\color{codegreen},
-%	keywordstyle=\color{blue},
-%	numberstyle=\color{codegray},
-%	stringstyle=\color{codepurple},
-%	basicstyle=\ttfamily,
-%	breaklines=true,                 
-%	%numbers=left,                    
-%	tabsize=2,
-%	frame=single,
-%}
-%
-%\lstset{style=matlab}
+\lstdefinestyle{lststyle}{
+	language=Python,
+	backgroundcolor=\color{backcolour},   
+	commentstyle=\color{codegreen},
+	keywordstyle=\color{blue},
+	numberstyle=\color{codegray},
+	stringstyle=\color{codepurple},
+	basicstyle=\ttfamily,
+	breaklines=true,                 
+	%numbers=left,                    
+	tabsize=2,
+	frame=single,
+}
+
+\lstset{style=lststyle}
 
 % fancy headers
 %\usepackage{fancyhdr}
