--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -17,3 +17,18 @@
 	year = {2008},
 	publish = {Springer}
 }
+
+@article{PhysRevFluids.7.084301,
+	title = {Shallow-water equations and box model simulations of turbidity currents from a moving source},
+	author = {Blanchette, Fran\ifmmode \mbox{\c{c}}\else \c{c}\fi{}ois},
+	journal = {Phys. Rev. Fluids},
+	volume = {7},
+	issue = {8},
+	pages = {084301},
+	numpages = {29},
+	year = {2022},
+	month = {Aug},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevFluids.7.084301},
+	url = {https://link.aps.org/doi/10.1103/PhysRevFluids.7.084301}
+}
